Make sure design doesn't overflow

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f7f7f9;
+  width: 100vw;
 }
 
 .header {
